# bazel-playground

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  docker-compose.yml  readme.md  requirements.txt
python_example/: BUILD.bazel  main.py
